improvements for just latex use

--- a/document.tex
+++ b/document.tex
@@ -13,11 +13,11 @@
   \small{Your Educational Institution}\\
   \small{\texttt{email@address.com}}
 }
-\date{December 15, 2012}
+\date{\today}
 
 \begin{document}
 
-\setstretch{1.00}
+\setstretch{1.00} % Linespacing
 \maketitle
 
 % -- Table of Contents --
@@ -29,7 +29,8 @@
 % \setstretch{1.50}  % one and a half spacing
 
 % -- Import content here
-\input{s_introduction}
+\input{intro}
+\input{body}
 
 
 % -- Bibliography (APA style)
