added back horizontal line for captions

--- a/preamble.tex
+++ b/preamble.tex
@@ -39,7 +39,7 @@
 
 \usepackage{caption}
 % -- configure captions for figures
-\DeclareCaptionFormat{listing}{\par #1#2#3}
+\DeclareCaptionFormat{listing}{\par\hrule #1#2#3}
 \captionsetup[figure]{%
   format=listing, 
   singlelinecheck=false, 
