made font smaller and added small comment to tell the user where you can change the font size

--- a/document.tex
+++ b/document.tex
@@ -3,7 +3,8 @@
 %% LaTeX Boilerplate (http://github.com/gbluma/latex-boilerplate/)
 %% 
 
-\documentclass[12pt,fleqn,leqno,letterpaper]{article}
+\documentclass[10pt,fleqn,leqno,letterpaper]{article}
+% change font size above
 
 \include{preamble}
 
