removed fleqn and changed to article

--- a/document.tex
+++ b/document.tex
@@ -3,7 +3,7 @@
 %% LaTeX Boilerplate (http://github.com/gbluma/latex-boilerplate/)
 %% 
 
-\documentclass[10pt,fleqn,leqno,letterpaper]{article}
+\documentclass[10pt,article]{article}
 % change font size above
 
 \include{preamble}
